[package]
name = "twelve-projects-of-codemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-serial = "0.7.0"
ds18b20 = "0.1.1"
embedded-hal = "0.2.7"
fugit = { version = "0.3.7", features = ["defmt"] }
heapless = "0.8.0"
one-wire-bus = "0.1.1"
panic-halt = "0.2.0"
panic-probe = "0.3.1"
rp-pico = "0.8.0"
ssd1306 = "0.8.4"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
